more spacing corrections

--- a/fec/fec/static/scss/components/_mega-menu.scss
+++ b/fec/fec/static/scss/components/_mega-menu.scss
@@ -24,6 +24,14 @@
 .mega__inner {
   padding: u(1rem);
   margin: u(1rem 0 0 0);
+
+  .icon-heading{
+    margin-left: u(1.2rem);
+
+    &::before{
+      margin-right: u(1rem);
+    }
+  }
 }
 
 .mega-heading__title {
@@ -31,6 +39,7 @@
   margin-left: u(3rem);
   font-family:sans-serif;
   font-size: u(1.6rem);
+  padding-top: u(1.11rem);
 
 
   a {
@@ -157,6 +166,13 @@
     .button--standard {
       color: $base;
       border: 1px solid $gray;
+    }
+  }
+  .mega__inner .icon-heading{
+    margin-left: 0;
+
+    &::before{
+      margin-right: u(2rem);
     }
   }
 
